--- a/views/layout.tt
+++ b/views/layout.tt
@@ -638,6 +638,11 @@
                     }
                 });
             $(document).ready(function () {
+                $('#configure-permissions').on('click', function () {
+                    $(this).attr('hidden', '');
+                    $('#permission-configuration').removeAttr('hidden');
+                }); 
+
                 $('#sortable').sortable({
                     cancel: "a"
                 });
