--- a/views/snippets/layout_permissions.tt
+++ b/views/snippets/layout_permissions.tt
@@ -7,29 +7,52 @@
     END;
 %]
     <li data-group-id="[% perm %]">
-        <h4>[% group.name %]</h4>
-
-        <div class="form-group">
-            <input type="checkbox" id="can_read" name="read" [% column.group_has(perm, 'read') && 'checked' %]>
-            <label for="can_read">Read</label>
-        </div>
-
-         <div class="form-group">
-            <input type="checkbox" id="can_write_new" name="write_new" [% column.group_has(perm, 'write_new') && 'checked' %]>
-            <label for="can_write_new">Write values to new records</label>
-        </div>
-
-        <div class="form-group">
-            <input type="checkbox" id="can_edit_existing" name="write_existing" [% column.group_has(perm, 'write_existing') && 'checked' %]>
-            <label for="can_edit_existing">Edit existing values</label>
-        </div>
-
+        <h5>[% group.name %]</h5>
         <button type="button" class="btn btn-sm btn-default" data-perm-id="[% perm %]">Delete rule</button>
+
+        <section>
+            <h6>Access</h6>
+            <div class="form-group">
+                <input type="checkbox" id="can_read" name="read" [% column.group_has(perm, 'read') && 'checked' %]>
+                <label for="can_read">Read</label>
+            </div>
+
+             <div class="form-group">
+                <input type="checkbox" id="[% perm %]-can_write_new" name="write_new" [% column.group_has(perm, 'write_new') && 'checked' %]>
+                <label for="[% perm %]-can_write_new">Write values to new records</label>
+            </div>
+
+            <div class="form-group">
+                <input type="checkbox" id="[% perm %]-can_edit_existing" name="write_existing" [% column.group_has(perm, 'write_existing') && 'checked' %]>
+                <label for="[% perm %]-can_edit_existing">Edit existing values</label>
+            </div>
+        </section>
+
+        <section>
+            <h6>Approval</h6>
+            <div class="form-group">
+                <input type="checkbox" id="[% perm %]-can_create_without_approval" name="write_new_no_approval" [% column.group_has(perm, 'write_new_no_approval') && 'checked' %]>
+                <label for="[% perm %]-can_create_without_approval">No approval required for new records</label>
+            </div>
+            <div class="form-group">
+                <input type="checkbox" id="[% perm %]-can_edit_without_approval" name="write_existing_no_approval" [% column.group_has(perm, 'write_existing_no_approval') && 'checked' %]>
+                <label for="[% perm %]-can_edit_without_approval">No approval required for editing values</label>
+            </div>
+            <div class="form-group">
+                <input type="checkbox" id="[% perm %]-can_approve_new" name="approve_new" [% column.group_has(perm, 'approve_new') && 'checked' %]>
+                <label for="[% perm %]-can_approve_new">Approve new values</label>
+            </div>
+            <div class="form-group">
+                <input type="checkbox" id="[% perm %]-can_approve_edits" name="approve_existing" [% column.group_has(perm, 'approve_existing') && 'checked' %]>
+                <label for="[% perm %]-can_approve_edits">Approve edits</label>
+            </div>
+        </section>
+
     </li>
 [% END %]
 
 [% BLOCK _permission_configuration %]
-    <h4>Configure permissions</h4>
+    <h4 tabindex="-1">Configure permissions</h4>
 
     <p>Here you can create rules to define the access of group members to this field.</p>
     <p>No user has access to this field, unless explicitly defined.</p>
@@ -43,7 +66,7 @@
             [% END %]
         </ul>
         [% END %]
-        <button type="button" class="btn btn-default add-permission">Add access rule</button>
+        <button type="button" class="btn btn-default add-permission">Add rule</button>
     [% ELSE %]
         <p>No groups have been created yet. <a href="/group">Create a group.</a></p>
     [% END %]
@@ -63,29 +86,26 @@
             [% END %]
         [% END %]
 
+        [% MACRO group_list(groups) BLOCK %]
+            <ul>
+                [% FOREACH group IN groups %]
+                <li>[% group %]</li>
+                [% END %]
+            </ul>
+        [% END %]
+
         [% IF column.permissions.size %]
         <section class="permissions">
             <h4>Groups that can read:</h4>
-            <ul>
-                [% FOREACH g IN column.group_summary('read') %]
-                <li>[% g %]</li>
-                [% END %]
-            </ul>
+            [% group_list(column.group_summary('read')) %]
 
             <h4>Groups that can write new values:</h4>
-            <ul>
-                [% FOREACH g IN column.group_summary('write_new') %]
-                <li>[% g %]</li>
-                [% END %]
-            </ul>
+            [% group_list(column.group_summary('write_new')) %]
 
             <h4>Groups that can write existing values:</h4>
-            <ul>
-                [% FOREACH g IN column.group_summary('write_existing') %]
-                <li>[% g %]</li>
-                [% END %]
-            </ul>
-        </sections>
+            [% group_list(column.group_summary('write_existing')) %]
+        </section>
+
         [% END %]
     [% ELSE # no column %]
         [% # TODO: symptom of system. Fix. %]
@@ -94,7 +114,7 @@
 
     [% IF groups.all.size %]
         <button id="configure-permissions" type="button" class="btn btn-default">Configure permissions</button>
-        <section id="permission-configuration">
+        <section id="permission-configuration" hidden>
             [% PROCESS _permission_configuration %]
         </section>
     [% END %]
