--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1098,11 +1098,9 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 .well-sm {
   border-radius: 0px; }
 
-.close {
+.modal .close {
   font-size: 22.5px;
-  font-weight: bold; }
-
-button.close {
+  font-weight: bold;
   background: transparent; }
 
 .modal {
@@ -1339,6 +1337,9 @@ small.search_term {
   border-bottom: 1px solid #bbb;
   padding-bottom: .5em; }
 
+#manage-fields #permissions {
+  margin-top: 1em; }
+
 #manage-fields #permissions ul {
   list-style-type: none;
   padding: 0; }
@@ -1402,7 +1403,64 @@ small.search_term {
   padding: 0; }
 
 #manage-fields .permission-rule,
-#manage-fields .display-condition {
+#manage-fields .display-condition,
+#manage-fields .permission {
   background-color: #eee;
   border: 1px solid #ccc;
   padding: .5em; }
+
+.permission .abbreviation {
+  border-bottom: 1px dashed #000;
+  cursor: help;
+  margin: 0 .2em; }
+
+#current-permissions .legend dd,
+#current-permissions .legend dt {
+  display: inline-block; }
+
+#current-permissions .legend dt {
+  width: 15%; }
+
+#current-permissions .legend dd {
+  width: 84%; }
+
+#current-permissions .configuration {
+  position: relative; }
+
+[role="tooltip"] .tooltip,
+[role="tooltip"] + .tooltip {
+  padding: .5em;
+  top: -2.7em;
+  right: -5em;
+  border: 1px solid #000;
+  background-color: #fff; }
+
+[role="tooltip"]:focus .tooltip.visually-hidden,
+[role="tooltip"]:active .tooltip.visually-hidden,
+[role="tooltip"]:hover .tooltip.visually-hidden,
+[role="tooltip"]:focus + .tooltip.visually-hidden,
+[role="tooltip"]:active + .tooltip.visually-hidden,
+[role="tooltip"]:hover + .tooltip.visually-hidden {
+  clip: auto;
+  height: auto;
+  margin: auto;
+  overflow: auto;
+  padding: initial;
+  position: absolute;
+  width: auto;
+  opacity: 1; }
+
+#current-permissions .permission .group-name {
+  font-size: 1.2em;
+  margin-top: 0; }
+
+#current-permissions .configuration .tooltip {
+  padding: .3em;
+  font-size: 1em;
+  top: -3em;
+  right: auto;
+  left: 0; }
+
+#current-permissions .summary {
+  width: 75%;
+  display: inline-block; }
