--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1172,13 +1172,13 @@ a.list-group-item-danger.active,a.list-group-item-danger.active:hover,a.list-gro
 .well-sm {
         border-radius:0px;
 }
-.close {
+
+.modal .close {
         font-size:22.5px;
         font-weight:bold;
+        background: transparent;
 }
-button.close {
-        background:transparent;
-}
+
 .modal {
         overflow:auto;
         overflow-y:scroll;
@@ -1465,6 +1465,10 @@ small.search_term {
     padding-bottom: .5em;
 }
 
+#manage-fields #permissions {
+    margin-top: 1em;
+}
+
 #manage-fields #permissions ul {
     list-style-type: none;
     padding: 0;
@@ -1512,8 +1516,84 @@ small.search_term {
 }
 
 #manage-fields .permission-rule,
-#manage-fields .display-condition {
+#manage-fields .display-condition,
+#manage-fields .permission {
     background-color: #eee;
     border: 1px solid #ccc;
     padding: .5em;
 }
+
+.permission .abbreviation {
+    border-bottom: 1px dashed #000;
+    cursor: help;
+    margin: 0 .2em;
+}
+
+#current-permissions .legend dd,
+#current-permissions .legend dt {
+    display: inline-block;
+}
+
+#current-permissions .legend dt {
+    width: 15%;
+}
+
+#current-permissions .legend dd {
+    width: 84%;
+}
+
+#current-permissions .configuration {
+    position: relative;
+}
+
+@mixin visually-unhide {
+    clip: auto;
+    height: auto;
+    margin: auto;
+    overflow: auto;
+    padding: initial;
+    position: absolute;
+    width: auto;
+    opacity: 1;
+}
+
+[role="tooltip"]   .tooltip,
+[role="tooltip"] + .tooltip {
+    padding: .5em;
+    top: -2.7em;
+    right: -5em;
+
+    border: 1px solid #000;
+    background-color: #fff;
+}
+
+[role="tooltip"]:focus    .tooltip.visually-hidden,
+[role="tooltip"]:active   .tooltip.visually-hidden,
+[role="tooltip"]:hover    .tooltip.visually-hidden,
+[role="tooltip"]:focus  + .tooltip.visually-hidden,
+[role="tooltip"]:active + .tooltip.visually-hidden,
+[role="tooltip"]:hover  + .tooltip.visually-hidden {
+ 
+    @include visually-unhide;
+}
+
+#current-permissions .permission .group-name {
+    font-size: 1.2em;
+    margin-top: 0;
+}
+
+#current-permissions .configuration .tooltip {
+    padding: .3em;
+    font-size: 1em;
+    top: -3em;
+    right: auto;
+    left: 0;
+}
+
+#current-permissions .summary {
+    width: 75%;
+    display: inline-block;
+}
+
+
+
