--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -149,11 +149,11 @@
                                         <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu" aria-labelledby="admin-menu" id="admin-menu-options">
-                                        <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/table/0">Add a table</a></li>
+                                        <li [% IF page=="table/0" %]class="active"[% END %]><a href="[% url.page %]/table/0">Add a table</a></li>
                                         <li [% IF page=="table" %]class="active"[% END %]><a href="[% url.page %]/table/">Manage tables</a></li>
                                         <li class="divider"></li>
                                         <li [% IF page=="layout" %]class="active"[% END %]><a href="[% url.page %]/layout/">Manage fields</a></li>
-                                        <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/layout/0">Add a field</a></li>
+                                        <li [% IF page=="layout/0" %]class="active"[% END %]><a href="[% url.page %]/layout/0">Add a field</a></li>
                                     </ul>
                                 </li>
                             [% END %]
