--- a/views/table.tt
+++ b/views/table.tt
@@ -12,7 +12,9 @@
             </div>
         </div>
     </div>
-    <p>To delete a table you need to first delete all the fields in it. To delete the fields go to <a href="/layout/">Manage fields</a>.</p>
+    [% IF instance.id %]
+        <p>To delete a table you need to first delete all the fields in it. To delete the fields go to <a href="/layout/">Manage fields</a>.</p>
+    [% END %]
     <button type="submit" id="submit" name="submit" value="submit" class="btn btn-primary">Save</button>
     [% IF instance.id %]
         <a href="" class="btn btn-default" data-toggle="modal" data-target="#myModal">Delete</a>
